<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AR localizer</string>
    <string name="current_location_label">Current Location</string>
    <string name="destination_location_label">Destination Location</string>
    <string name="longitude_label">Longitude</string>
    <string name="latitude_label">Latitude</string>
    <string name="set_destination_label">Set destination</string>
    <string name="latitude_error">Latitude value should be between -90 an 90</string>
    <string name="longitude_error">Longitude value should be between -180 an 180</string>
    <string name="empty_value_error">Value should not be empty</string>
    <string name="essential_permissions_not_granted_info">Essential permissions missing, main functionality disabled</string>
    <string name="permission_recheck_question">Check again</string>
    <string name="error_title">Error</string>
    <string name="error_message">"Error : %1$s. Restart compass ?"</string>
    <string name="azimuth_between_locations_label">Azimuth between locations</string>
</resources>
